Mise en place des régles regex + modification du router.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-  Login
+  <form method="post" action="/login">
+      <input type="text" name="nom">
+      <input type="text" name="prenom">
+      <button type="submit">Valier</button>
+  </form>
 </body>
 </html>
