--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Alumni | CCI Campus{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
+    <link rel="stylesheet" href="/assets/css/style.css">
     {% block javascripts %}{% endblock %}
 </head>
 <body>
-    <p>Page d'accueil</p>
-{% block body %}{% endblock %}
+    {% block body %}{% endblock %}
 
 </body>
 </html>
