--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Alumni | CCI Campus{% endblock %}</title>
     {% block stylesheets %}{% endblock %}
-    <link rel="stylesheet" href="/assets/css/style.css">
     {% block javascripts %}{% endblock %}
+
+    <style>
+
+        .container {
+            max-width: 100%;
+            width: 950px;
+            margin: 0 auto;
+        }
+    </style>
 </head>
 <body>
-    {% block body %}{% endblock %}
+    <div class="container">
+        <h1>Liste des clients</h1>
+        {% block body %}{% endblock %}
+    </div>
 
 </body>
 </html>
